--- a/homework/一、静态页面模仿.html
+++ b/homework/一、静态页面模仿.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="css/test.css" />
+        <link rel="stylesheet" type="text/css" href="test.css" />
         <title>千库网静态页面模仿</title>
     </head>
     <body>
