--- a/潘兢_code_2/WebsiteTest.html
+++ b/潘兢_code_2/WebsiteTest.html
@@ -7,12 +7,14 @@
     </head>
     <body>
         <!--导航栏-->
-        <ul>
-            <li><a href="#1"><b>主页></b></a></li>
-            <li><a href="#2"><b>图片></b></a></li>
-            <li><a href="#3"><b>资讯></b></a></li>
-            <li><p><b>//</b></p></li>
-        </ul>
+        <header>
+            <ul>
+                <li><a href="#1"><b>主页></b></a></li>
+                <li><a href="#2"><b>图片></b></a></li>
+                <li><a href="#3"><b>资讯></b></a></li>
+                <li><p><b>//</b></p></li>
+            </ul>
+        </header>
         <!--内容-->
         <div class="music">
             <audio controls>
@@ -24,13 +26,14 @@
             <img src="picture/p.jpg" alt="头像" width="200" height="200" style="border-radius: 25px;">
         </div>
 
+        <head>
         <div class="title">
             <p><b>华&nbsp;/&nbsp;东&nbsp;/&nbsp;师&nbsp;/&nbsp;范&nbsp;/&nbsp;大&nbsp;/&nbsp;学</b></p>
         </div>
-
         <div class="a1">
             <p><b>E&nbsp;/&nbsp;C&nbsp;/&nbsp;N&nbsp;/&nbsp;U</b></p>
         </div>
+        </head>
 
         <div class="a2">
             <p><b>/  简介  /</b></p>
@@ -59,12 +62,12 @@
         </div>
 
         <div class="a5">
-            <a href="#more" class="button">更多</a> 
+            <a href="https://www.ecnu.edu.cn/" class="button">更多</a> 
         </div>
 
         <div class="f1">
             <p>&nbsp;</p>
         </div>
-
+        
     </body>
 </html>
