--- a/潘兢_code_2/WebsiteTest.html
+++ b/潘兢_code_2/WebsiteTest.html
@@ -54,15 +54,53 @@
         </div>
 
         <div class="picture2">
-            <img class="p1" src="picture/p1.jpg" alt="风景1" width="800" height="450" style="border-radius: 25px;">
+            <img class="p1" src="picture/p1.jpg" alt="风景1" width="400" height="225" style="border-radius: 25px;">
         </div>
     
         <div class="picture3">
-            <img class="p2" src="picture/p2.jpg" alt="风景2" width="800" height="450" style="border-radius: 25px;">
+            <img class="p2" src="picture/p2.jpg" alt="风景2" width="400" height="225" style="border-radius: 25px;">
+        </div>
+
+        <div class="picture4">
+            <img class="p3" src="picture/p3.jpg" alt="风景3" width="400" height="225" style="border-radius: 25px;">
+        </div>
+
+        <div class="picture5">
+            <img class="p4" src="picture/p4.jpg" alt="风景4" width="400" height="225" style="border-radius: 25px;">
+        </div>
+
+        <div class="picture6">
+            <a href="https://www.ecnu.edu.cn/_redirect?siteId=2&columnId=1948&articleId=261323">
+            <img class="p5" src="https://www.ecnu.edu.cn/_upload/article/images/4f/4c/846806754c32a215a040bf2de59f/de804068-af0d-4a60-ab0b-28337e525b36_s.jpg"
+             alt="资讯1" width="350" height="175" style="border-radius: 10px;"></a>
+        </div>
+
+        <div class="a7">
+            <a class="one" href="https://www.ecnu.edu.cn/_redirect?siteId=2&columnId=1948&articleId=261323">
+            <p>>>华东师大集体备课让新思想入耳入脑更入...</p></a>
+        </div>
+
+        <div class="picture7">
+            <a href="https://www.ecnu.edu.cn/_redirect?siteId=2&columnId=1948&articleId=261243">
+            <img class="p6" src="https://www.ecnu.edu.cn/_upload/article/images/ab/ab/93be94e640ff9e5fa5140c616357/46242b2b-be41-4c74-8d04-20429d7ae681_s.jpg"
+             alt="资讯2" width="350" height="175" style="border-radius: 10px;"></a>
+        </div>
+
+        <div class="a8">
+            <a class="two" href="https://news.ecnu.edu.cn/fc/34/c1833a261172/page.htm">
+            <p>>>华东师大本科学子获第十一届中国大学生...</p></a>
+        </div>
+
+        <div class="a6">
+            <p><b>/  近期资讯  /</b></p>
         </div>
 
         <div class="a5">
-            <a href="https://www.ecnu.edu.cn/" class="button">更多</a> 
+            <a href="#more-picture" class="button1">更多</a> 
+        </div>
+
+        <div class="a9">
+            <a href="#more-news" class="button2">更多</a> 
         </div>
 
         <div class="f1">
